# Taccel

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  viz_frames.py
assets/robots/: sensor.vtk
examples/: example_utils.py  grasp_soft_teddy.py  peg.py  tac_man.py
ptx/wp_warp_ipc.collision_kernels/: wp_warp_ipc.collision_kernels.sm86.ptx
ptx/wp_warp_ipc.energy.barrier_energy/: wp_warp_ipc.energy.barrier_energy.sm86.ptx
ptx/wp_warp_ipc.energy.barrier_energy_gradient/: wp_warp_ipc.energy.barrier_energy_gradient.sm86.ptx
ptx/wp_warp_ipc.energy.body_force_energy/: wp_warp_ipc.energy.body_force_energy.sm86.ptx
ptx/wp_warp_ipc.energy.check_min_dist/: wp_warp_ipc.energy.check_min_dist.sm86.ptx
ptx/wp_warp_ipc.energy.inertia_energy/: wp_warp_ipc.energy.inertia_energy.sm86.ptx
ptx/wp_warp_ipc.energy.kinematic_constraint_energy/: wp_warp_ipc.energy.kinematic_constraint_energy.sm86.ptx
ptx/wp_warp_ipc.energy.nhk_elastic_energy/: wp_warp_ipc.energy.nhk_elastic_energy.sm86.ptx
ptx/wp_warp_ipc.energy.rigidity_energy/: wp_warp_ipc.energy.rigidity_energy.sm86.ptx
ptx/wp_warp_ipc.kinematic_kernels/: wp_warp_ipc.kinematic_kernels.sm86.ptx
taccel/: __init__.py  taccel.py  tactile_robot.py  task.py  utils.py  vbts.py
taccel/data/: n2rgb.pth
warp_ipc/: body_handle.py  collision_detection.pyi  collision_kernels.py  ipc_integrator.pyi  joint_handle.py  kinematic_kernels.py  linear_constraint_kernels.py  robots.py  set_state_kernels.py  sim_data.py  sim_kernels.py  sim_model.pyi
warp_ipc/utils/: io.py  (+16 more)
(+313 files in other folders)
